tests/NormalTests/paczka1/small_fuzzy/92513228.err
Error in line 1: 3P6N S987 97,2
Error in line 2: S922 S647 21,4
